--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             </section>
 
             <section id="learn">
+                <img src="images/" alt="example">
+                
                 <div>
                     <h2>Learn About Colorado</h2>
 
