--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </section>
 
             <section id="learn">
-                <img src="images/" alt="example">
+                <img src="images/vertical-one.jpg" alt="A man standing on a scenic overlook in Colorado">
                 
                 <div>
                     <h2>Learn About Colorado</h2>
@@ -44,7 +44,7 @@
                     <p>example</p>
                 </div>
 
-                <img src="images/" alt="example">
+                <img src="images/vertical-two.jpg" alt="A beautiful alpine lake surrounded by pine trees">
             </section>
 
             <section id="gallery">
