--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         </header>
 
         <main>
+            <div id="light-mode">
+                <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
+            </div>
+            
             <section id="about">
                 <h2>About Us</h2>
 
