--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>GIT 418 Final Project</title>
 
         <link rel="stylesheet" href="styles.css">
+        <script src="script.js" defer></script>
     </head>
 
     <body>
