--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                     <li><a href="#learn">Learn</a></li>
                     <li><a href="#gallery">Visualize</a></li>
                     <li><a href="#weather">Weather</a></li>
-                    <li><a href="#faq">FAQ</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#facts">Fun Facts</a></li>
                 </ul>
             </nav>
         </header>
@@ -61,7 +60,7 @@
             <section id="gallery">
                 <h2>Visualize</h2>
 
-                <p>The best way to see Colorado is in person, but here's a few stunning photos to get you dreaming of hiking and roadtrips in the meantime.</p>
+                <p>The best way to see Colorado is in person, but here are a few stunning photos to get you dreaming of hiking and road trips in the meantime.</p>
 
                 <div id="slideshow">
                     <div class="mySlides">
@@ -119,18 +118,12 @@
                 <p>If it doesn't work the first time, try entering a city with a bigger population, as we can't collect data on super small towns.</p>
             </section>
 
-            <section id="faq">
-                <h2>Frequently Asked Questions</h2>
+            <section id="facts">
+                <h2>Fun Facts About Colorado</h2>
 
-                <p>Have more questions? We have answers.</p>
-            </section>
+                <div>
 
-            <section id="contact">
-                <h2>Contact Us</h2>
-
-                <p>If you like what we do, or want to get in touch, please fill out our contact form.</p>
-
-                <p>Please include a message in your response.</p>
+                </div>
             </section>
         </main>
 
