html and css done

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Merienda:wght@300..900&display=swap" rel="stylesheet">
+        
         <!-- 
-        I tried to add a slider for the gallery section, but to make the slider work I'd have to add this. 
-        Any time I have this link active, it makes my accordion stop working.
+        I'VE COMMENTED THIS CODE OUT BECAUSE IT'S NOT WORKING AS IT SHOULD
+        AFTER ADDING THE PROPER JQUERY LINKS LISTED ON https://jqueryui.com/slider/ FOR SOME REASON THEY DISABLE MY ACCORDION SECTION. 
+        I'M UNSURE WHY, AND I HAVE RAN OUT OF TIME TO TROUBLESHOOT THE ISSUE ANY LONGER
+        MY ORIGINAL PLAN WAS TO USE A SLIDER TO CONTROL GALLERY IMAGE MOVEMENTS
+        THESE COMMENTS WILL BE COPY & PASTED IN ALL RELEVANT AREAS
 
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.14.0/themes/base/jquery-ui.css">
         -->
@@ -99,7 +103,14 @@
                 <button class="prev" onclick="prevSlide()">&#10094;</button>
                 <button class="next" onclick="nextSlide()">&#10095;</button>
 
+                <!-- 
                 <div id="slider"></div>
+                I'VE COMMENTED THIS CODE OUT BECAUSE IT'S NOT WORKING AS IT SHOULD
+                AFTER ADDING THE PROPER JQUERY LINKS LISTED ON https://jqueryui.com/slider/ FOR SOME REASON THEY DISABLE MY ACCORDION SECTION. 
+                I'M UNSURE WHY, AND I HAVE RAN OUT OF TIME TO TROUBLESHOOT THE ISSUE ANY LONGER
+                MY ORIGINAL PLAN WAS TO USE A SLIDER TO CONTROL GALLERY IMAGE MOVEMENTS
+                THESE COMMENTS WILL BE COPY & PASTED IN ALL RELEVANT AREAS 
+                -->
             </section>
 
             <section id="weather">
